# varQL

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  VARQL_PROJECT_PLAN.md  docker-compose.yml  environment.yml  pyproject.toml  qlpack.yml  run_cve.sh
benchmarks/: PILOT_BENCHMARK_PROTOCOL.md
data/: fix_info.csv  project_info.csv
example-mcp-configs/: claude_config.json  codex_config.toml  gemini_settings.json
query-examples-c/: CVE-2024-38796-query.ql
query-examples-java/: CVE-2013-7285-query.ql  CVE-2025-27526-query.ql  CVE-2025-32959-query.ql  CVE-2025-53622-query.ql
scripts/: build_codeql_dbs.py  codeql_docs_fetcher.py  create_pilot_benchmark.py  cves_fetcher.py  cwe_fetcher.py  delete_cve_analysis_collections.py  extract_seed_schema.py  generate_seed_synthesis_prompt.py  get_cve_repos.py  prepare_chromda_db.sh  run_pilot_baseline.py  run_pilot_benchmark.py  run_schema_guided_generation.py  run_variant_seed_case.py
src/: ast_extraction.py  config.py  data_types.py  diff_preprocessing.py  evaluation.py  ql_agent.py  query_subagents_evaluation.py  utils.py  variant_benchmark.py
tests/: test_build_codeql_dbs.py  test_codex_backend.py  test_config.py  test_diff_preprocessing.py  test_extract_seed_schema_script.py  test_family_schema.py  test_generate_seed_synthesis_prompt_script.py  test_pilot_baseline_runner.py  test_pilot_benchmark.py  test_pilot_benchmark_runner.py  test_prompt_builder.py  test_schema_extraction.py  test_schema_guided_runner.py  test_schema_ir.py  test_variant_benchmark.py  test_variant_evaluation.py  test_variant_runner.py
(+26 files in other folders)
