[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varql"
version = "0.1.0"
description = "Variant-aware CodeQL query synthesis research codebase"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "VarQL Research Team" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
